test/fixtures/stmd/bad.txt
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 395

.
 *-*
.
<p><em>-</em></p>
.

error:

<p>*-*</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 531

.
# foo *bar* \*baz\*
.
<h1>foo <em>bar</em> *baz*</h1>
.

error:

<h1>foo *bar* *baz*</h1>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 680

.
Foo *bar*
=========

Foo *bar*
---------
.
<h1>Foo <em>bar</em></h1>
<h2>Foo <em>bar</em></h2>
.

error:

<h1>Foo *bar*</h1>
<h2>Foo *bar*</h2>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1237

.
``` ```
aaa
.
<p><code></code>
aaa</p>
.

error:

<p><code></code>aaa</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1328

.
``` aa ```
foo
.
<p><code>aa</code>
foo</p>
.

error:

<p><code>aa</code>foo</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1406

.
<DIV CLASS="foo">

*Markdown*

</DIV>
.
<DIV CLASS="foo">
<p><em>Markdown</em></p>
</DIV>
.

error:

<DIV CLASS="foo">
<p>*Markdown*</p>
</DIV>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1534

.
<div class
foo
.
<div class
foo
.

error:

<p>&lt;div class
foo</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1570

.
<div>

*Emphasized* text.

</div>
.
<div>
<p><em>Emphasized</em> text.</p>
</div>
.

error:

<div>
<p>*Emphasized* text.</p>
</div>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1652

.
[foo]: /url "title"

[foo]
.
<p><a href="/url" title="title">foo</a></p>
.

error:

<p>[foo]: /url &quot;title&quot;</p>
<p>[foo]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1660

.
   [foo]: 
      /url  
           'the title'  

[foo]
.
<p><a href="/url" title="the title">foo</a></p>
.

error:

<p>[foo]:
/url<br />
'the title'</p>
<p>[foo]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1670

.
[Foo*bar\]]:my_(url) 'title (with parens)'

[Foo*bar\]]
.
<p><a href="my_(url)" title="title (with parens)">Foo*bar]</a></p>
.

error:

<p>[Foo*bar]]:my_(url) 'title (with parens)'</p>
<p>[Foo*bar]]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1678

.
[Foo bar]:
<my url>
'title'

[Foo bar]
.
<p><a href="my url" title="title">Foo bar</a></p>
.

error:

<p>[Foo bar]:</p>
<my url>
'title'
<p>[Foo bar]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1690

.
[foo]:
/url

[foo]
.
<p><a href="/url">foo</a></p>
.

error:

<p>[foo]:
/url</p>
<p>[foo]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1712

.
[foo]

[foo]: url
.
<p><a href="url">foo</a></p>
.

error:

<p>[foo]</p>
<p>[foo]: url</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1723

.
[foo]

[foo]: first
[foo]: second
.
<p><a href="first">foo</a></p>
.

error:

<p>[foo]</p>
<p>[foo]: first
[foo]: second</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1735

.
[FOO]: /url

[Foo]
.
<p><a href="/url">Foo</a></p>
.

error:

<p>[FOO]: /url</p>
<p>[Foo]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1743

.
[ΑΓΩ]: /φου

[αγω]
.
<p><a href="/φου">αγω</a></p>
.

error:

<p>[ΑΓΩ]: /φου</p>
<p>[αγω]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1754

.
[foo]: /url
.
.

error:

<p>[foo]: /url</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1813

.
# [Foo]
[foo]: /url
> bar
.
<h1><a href="/url">Foo</a></h1>
<blockquote>
<p>bar</p>
</blockquote>
.

error:

<h1>[Foo]</h1>
<p>[foo]: /url</p>
<blockquote>
<p>bar</p>
</blockquote>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1827

.
[foo]: /foo-url "foo"
[bar]: /bar-url
  "bar"
[baz]: /baz-url

[foo],
[bar],
[baz]
.
<p><a href="/foo-url" title="foo">foo</a>,
<a href="/bar-url" title="bar">bar</a>,
<a href="/baz-url">baz</a></p>
.

error:

<p>[foo]: /foo-url &quot;foo&quot;
[bar]: /bar-url
&quot;bar&quot;
[baz]: /baz-url</p>
<p>[foo],
[bar],
[baz]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1847

.
[foo]

> [foo]: /url
.
<p><a href="/url">foo</a></p>
<blockquote>
</blockquote>
.

error:

<p>[foo]</p>
<blockquote>
<p>[foo]: /url</p>
</blockquote>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 2414

.
1.  A paragraph
    with two lines.

        indented code

    > A block quote.
.
<ol>
<li><p>A paragraph
with two lines.</p>
<pre><code>indented code
</code></pre>
<blockquote>
<p>A block quote.</p>
</blockquote></li>
</ol>
.

error:

<ol>
<li>A paragraph
with two lines.<pre><code>indented code
</code></pre>
<blockquote>
<p>A block quote.</p>
</blockquote></li>
</ol>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 2574

.
1.  foo

    ```
    bar
    ```

    baz

    > bam
.
<ol>
<li><p>foo</p>
<pre><code>bar
</code></pre>
<p>baz</p>
<blockquote>
<p>bam</p>
</blockquote></li>
</ol>
.

error:

<ol>
<li>foo<pre><code>bar
</code></pre>
baz
<blockquote>
<p>bam</p>
</blockquote></li>
</ol>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 2743

.
 1.  A paragraph
     with two lines.

         indented code

     > A block quote.
.
<ol>
<li><p>A paragraph
with two lines.</p>
<pre><code>indented code
</code></pre>
<blockquote>
<p>A block quote.</p>
</blockquote></li>
</ol>
.

error:

<ol>
<li>A paragraph
with two lines.<pre><code>indented code
</code></pre>
<blockquote>
<p>A block quote.</p>
</blockquote></li>
</ol>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 2764

.
  1.  A paragraph
      with two lines.

          indented code

      > A block quote.
.
<ol>
<li><p>A paragraph
with two lines.</p>
<pre><code>indented code
</code></pre>
<blockquote>
<p>A block quote.</p>
</blockquote></li>
</ol>
.

error:

<ol>
<li>A paragraph
with two lines.<pre><code>indented code
</code></pre>
<blockquote>
<p>A block quote.</p>
</blockquote></li>
</ol>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 2785

.
   1.  A paragraph
       with two lines.

           indented code

       > A block quote.
.
<ol>
<li><p>A paragraph
with two lines.</p>
<pre><code>indented code
</code></pre>
<blockquote>
<p>A block quote.</p>
</blockquote></li>
</ol>
.

error:

<ol>
<li>A paragraph
with two lines.<pre><code>indented code
</code></pre>
<blockquote>
<p>A block quote.</p>
</blockquote></li>
</ol>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 2833

.
  1.  A paragraph
with two lines.

          indented code

      > A block quote.
.
<ol>
<li><p>A paragraph
with two lines.</p>
<pre><code>indented code
</code></pre>
<blockquote>
<p>A block quote.</p>
</blockquote></li>
</ol>
.

error:

<ol>
<li>A paragraph
with two lines.<pre><code>indented code
</code></pre>
<blockquote>
<p>A block quote.</p>
</blockquote></li>
</ol>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3292

.
- foo
  - bar
    - baz


      bim
.
<ul>
<li>foo
<ul>
<li>bar
<ul>
<li>baz</li>
</ul></li>
</ul></li>
</ul>
<pre><code>  bim
</code></pre>
.

error:

<ul>
<li>foo
<ul>
<li><p>bar</p>
<ul>
<li>baz</li>
</ul>
<p>bim</p></li>
</ul></li>
</ul>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3430

.
- a
- b

  [ref]: /url
- d
.
<ul>
<li><p>a</p></li>
<li><p>b</p></li>
<li><p>d</p></li>
</ul>
.

error:

<ul>
<li><p>a</p></li>
<li><p>b</p>
<p>[ref]: /url</p></li>
<li><p>d</p></li>
</ul>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3550

.
* foo
  * bar

  baz
.
<ul>
<li><p>foo</p>
<ul>
<li>bar</li>
</ul>
<p>baz</p></li>
</ul>
.

error:

<ul>
<li>foo
<ul>
<li>bar</li>
</ul>
baz</li>
</ul>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3647

.
\\*emphasis*
.
<p>\<em>emphasis</em></p>
.

error:

<p>\*emphasis*</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3694

.
<a href="/bar\/)">
.
<p><a href="/bar\/)"></p>
.

error:

<a href="/bar\/)">


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3704

.
[foo](/bar\* "ti\*tle")
.
<p><a href="/bar*" title="ti*tle">foo</a></p>
.

error:

<p>[foo](/bar* &quot;ti*tle&quot;)</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3710

.
[foo]

[foo]: /bar\* "ti\*tle"
.
<p><a href="/bar*" title="ti*tle">foo</a></p>
.

error:

<p>[foo]</p>
<p>[foo]: /bar* &quot;ti*tle&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3718

.
``` foo\+bar
foo
```
.
<pre><code class="language-foo+bar">foo
</code></pre>
.

error:

<pre><code class="language-foo\+bar">foo
</code></pre>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3791

.
<a href="&ouml;&ouml;.html">
.
<p><a href="&ouml;&ouml;.html"></p>
.

error:

<a href="&ouml;&ouml;.html">


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3797

.
[foo](/f&ouml;&ouml; "f&ouml;&ouml;")
.
<p><a href="/f&ouml;&ouml;" title="f&ouml;&ouml;">foo</a></p>
.

error:

<p>[foo](/f&ouml;&ouml; &quot;f&ouml;&ouml;&quot;)</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3803

.
[foo]

[foo]: /f&ouml;&ouml; "f&ouml;&ouml;"
.
<p><a href="/f&ouml;&ouml;" title="f&ouml;&ouml;">foo</a></p>
.

error:

<p>[foo]</p>
<p>[foo]: /f&ouml;&ouml; &quot;f&ouml;&ouml;&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3811

.
``` f&ouml;&ouml;
foo
```
.
<pre><code class="language-f&ouml;&ouml;">foo
</code></pre>
.

error:

<pre><code class="language-f&amp;ouml;&amp;ouml;">foo
</code></pre>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3938

.
[not a `link](/foo`)
.
<p>[not a <code>link](/foo</code>)</p>
.

error:

<p>[not a<code>link](/foo</code>)</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3954

.
<a href="`">`
.
<p><a href="`">`</p>
.

error:

<a href="`">`


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4095

.
*foo bar*
.
<p><em>foo bar</em></p>
.

error:

<p>*foo bar*</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4101

.
_foo bar_
.
<p><em>foo bar</em></p>
.

error:

<p>_foo bar_</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4109

.
**foo bar**
.
<p><strong>foo bar</strong></p>
.

error:

<p>**foo bar**</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4115

.
__foo bar__
.
<p><strong>foo bar</strong></p>
.

error:

<p>__foo bar__</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4123

.
*foo
bar*
.
<p><em>foo
bar</em></p>
.

error:

<p>*foo
bar*</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4131

.
_foo
bar_
.
<p><em>foo
bar</em></p>
.

error:

<p>_foo
bar_</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4139

.
**foo
bar**
.
<p><strong>foo
bar</strong></p>
.

error:

<p>**foo
bar**</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4147

.
__foo
bar__
.
<p><strong>foo
bar</strong></p>
.

error:

<p>__foo
bar__</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4157

.
*foo [bar](/url)*
.
<p><em>foo <a href="/url">bar</a></em></p>
.

error:

<p>*foo [bar](/url)*</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4163

.
_foo [bar](/url)_
.
<p><em>foo <a href="/url">bar</a></em></p>
.

error:

<p>_foo [bar](/url)_</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4169

.
**foo [bar](/url)**
.
<p><strong>foo <a href="/url">bar</a></strong></p>
.

error:

<p>**foo [bar](/url)**</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4175

.
__foo [bar](/url)__
.
<p><strong>foo <a href="/url">bar</a></strong></p>
.

error:

<p>__foo [bar](/url)__</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4184

.
*foo [bar*](/url)
.
<p>*foo <a href="/url">bar*</a></p>
.

error:

<p>*foo [bar*](/url)</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4190

.
_foo [bar_](/url)
.
<p>_foo <a href="/url">bar_</a></p>
.

error:

<p>_foo [bar_](/url)</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4196

.
**<a href="**">
.
<p>**<a href="**"></p>
.

error:

<p>**&lt;a href=&quot;**&quot;&gt;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4202

.
__<a href="__">
.
<p>__<a href="__"></p>
.

error:

<p>__&lt;a href=&quot;__&quot;&gt;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4208

.
*a `*`*
.
<p><em>a <code>*</code></em></p>
.

error:

<p>*a<code>*</code>*</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4214

.
_a `_`_
.
<p><em>a <code>_</code></em></p>
.

error:

<p>_a<code>_</code>_</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4325

.
*here is a \**
.
<p><em>here is a *</em></p>
.

error:

<p>*here is a **</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4331

.
__this is a double underscore (`__`)__
.
<p><strong>this is a double underscore (<code>__</code>)</strong></p>
.

error:

<p>__this is a double underscore (<code>__</code>)__</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4339

.
foo*bar*baz
.
<p>foo<em>bar</em>baz</p>
.

error:

<p>foo*bar*baz</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4357

.
_foo_bar_baz_
.
<p><em>foo_bar_baz</em></p>
.

error:

<p>_foo_bar_baz_</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4363

.
11*15*32
.
<p>11<em>15</em>32</p>
.

error:

<p>11*15*32</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4378

.
_foo_bar_baz_
.
<p><em>foo_bar_baz</em></p>
.

error:

<p>_foo_bar_baz_</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4384

.
__foo__bar__baz__
.
<p><strong>foo__bar__baz</strong></p>
.

error:

<p>__foo__bar__baz__</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4392

.
***foo bar***
.
<p><strong><em>foo bar</em></strong></p>
.

error:

<p>***foo bar***</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4398

.
___foo bar___
.
<p><strong><em>foo bar</em></strong></p>
.

error:

<p>___foo bar___</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4404

.
***foo** bar*
.
<p><em><strong>foo</strong> bar</em></p>
.

error:

<p>***foo** bar*</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4410

.
___foo__ bar_
.
<p><em><strong>foo</strong> bar</em></p>
.

error:

<p>___foo__ bar_</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4416

.
***foo* bar**
.
<p><strong><em>foo</em> bar</strong></p>
.

error:

<p>***foo* bar**</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4422

.
___foo_ bar__
.
<p><strong><em>foo</em> bar</strong></p>
.

error:

<p>___foo_ bar__</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4428

.
*foo **bar***
.
<p><em>foo <strong>bar</strong></em></p>
.

error:

<p>*foo **bar***</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4434

.
_foo __bar___
.
<p><em>foo <strong>bar</strong></em></p>
.

error:

<p>_foo __bar___</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4440

.
**foo *bar***
.
<p><strong>foo <em>bar</em></strong></p>
.

error:

<p>**foo *bar***</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4446

.
__foo _bar___
.
<p><strong>foo <em>bar</em></strong></p>
.

error:

<p>__foo _bar___</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4452

.
*foo **bar***
.
<p><em>foo <strong>bar</strong></em></p>
.

error:

<p>*foo **bar***</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4458

.
_foo __bar___
.
<p><em>foo <strong>bar</strong></em></p>
.

error:

<p>_foo __bar___</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4464

.
*foo *bar* baz*
.
<p><em>foo <em>bar</em> baz</em></p>
.

error:

<p>*foo *bar* baz*</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4470

.
_foo _bar_ baz_
.
<p><em>foo <em>bar</em> baz</em></p>
.

error:

<p>_foo _bar_ baz_</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4476

.
**foo **bar** baz**
.
<p><strong>foo <strong>bar</strong> baz</strong></p>
.

error:

<p>**foo **bar** baz**</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4482

.
__foo __bar__ baz__
.
<p><strong>foo <strong>bar</strong> baz</strong></p>
.

error:

<p>__foo __bar__ baz__</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4488

.
*foo **bar** baz*
.
<p><em>foo <strong>bar</strong> baz</em></p>
.

error:

<p>*foo **bar** baz*</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4494

.
_foo __bar__ baz_
.
<p><em>foo <strong>bar</strong> baz</em></p>
.

error:

<p>_foo __bar__ baz_</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4500

.
**foo *bar* baz**
.
<p><strong>foo <em>bar</em> baz</strong></p>
.

error:

<p>**foo *bar* baz**</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4506

.
__foo _bar_ baz__
.
<p><strong>foo <em>bar</em> baz</strong></p>
.

error:

<p>__foo _bar_ baz__</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4516

.
**foo**
.
<p><strong>foo</strong></p>
.

error:

<p>**foo**</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4530

.
*_foo_*
.
<p><em><em>foo</em></em></p>
.

error:

<p>*_foo_*</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4536

.
**__foo__**
.
<p><strong><strong>foo</strong></strong></p>
.

error:

<p>**__foo__**</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4546

.
*foo**
.
<p><em>foo</em>*</p>
.

error:

<p>*foo**</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4552

.
*foo *bar**
.
<p><em>foo <em>bar</em></em></p>
.

error:

<p>*foo *bar**</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4558

.
**foo***
.
<p><strong>foo</strong>*</p>
.

error:

<p>**foo***</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4564

.
***foo* bar***
.
<p><strong><em>foo</em> bar</strong>*</p>
.

error:

<p>***foo* bar***</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4570

.
***foo** bar***
.
<p><em><strong>foo</strong> bar</em>**</p>
.

error:

<p>***foo** bar***</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4579

.
*foo**bar***
.
<p><em>foo</em><em>bar</em>**</p>
.

error:

<p>*foo**bar***</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4595

.
*foo**

**foo*
.
<p><em>foo</em>*</p>
<p>**foo*</p>
.

error:

<p>*foo**</p>
<p>**foo*</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4604

.
*foo *bar**

**foo* bar*
.
<p><em>foo <em>bar</em></em></p>
<p>**foo* bar*</p>
.

error:

<p>*foo *bar**</p>
<p>**foo* bar*</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4621

.
*bar***
.
<p><em>bar</em>**</p>
.

error:

<p>*bar***</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4633

.
**bar***
.
<p><strong>bar</strong>*</p>
.

error:

<p>**bar***</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4645

.
***foo *bar*
.
<p>***foo <em>bar</em></p>
.

error:

<p>***foo *bar*</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4717

.
[link](/uri "title")
.
<p><a href="/uri" title="title">link</a></p>
.

error:

<p>[link](/uri &quot;title&quot;)</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4725

.
[link](/uri)
.
<p><a href="/uri">link</a></p>
.

error:

<p>[link](/uri)</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4733

.
[link]()
.
<p><a href="">link</a></p>
.

error:

<p>[link]()</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4739

.
[link](<>)
.
<p><a href="">link</a></p>
.

error:

<p>[link](&lt;&gt;)</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4755

.
[link](</my uri>)
.
<p><a href="/my uri">link</a></p>
.

error:

<p>[link](&lt;/my uri&gt;)</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4773

.
[link]((foo)and(bar))
.
<p><a href="(foo)and(bar)">link</a></p>
.

error:

<p>[link]((foo)and(bar))</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4788

.
[link](foo(and\(bar\)))
.
<p><a href="foo(and(bar))">link</a></p>
.

error:

<p>[link](foo(and(bar)))</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4794

.
[link](<foo(and(bar))>)
.
<p><a href="foo(and(bar))">link</a></p>
.

error:

<p>[link](&lt;foo(and(bar))&gt;)</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4803

.
[link](foo\)\:)
.
<p><a href="foo):">link</a></p>
.

error:

<p>[link](foo):)</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4811

.
[link](foo%20b&auml;)
.
<p><a href="foo%20b&auml;">link</a></p>
.

error:

<p>[link](foo%20b&auml;)</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4821

.
[link]("title")
.
<p><a href="&quot;title&quot;">link</a></p>
.

error:

<p>[link](&quot;title&quot;)</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4829

.
[link](/url "title")
[link](/url 'title')
[link](/url (title))
.
<p><a href="/url" title="title">link</a>
<a href="/url" title="title">link</a>
<a href="/url" title="title">link</a></p>
.

error:

<p>[link](/url &quot;title&quot;)
[link](/url 'title')
[link](/url (title))</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4841

.
[link](/url "title \"&quot;")
.
<p><a href="/url" title="title &quot;&quot;">link</a></p>
.

error:

<p>[link](/url &quot;title &quot;&quot;&quot;)</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4857

.
[link](/url 'title "and" title')
.
<p><a href="/url" title="title &quot;and&quot; title">link</a></p>
.

error:

<p>[link](/url 'title &quot;and&quot; title')</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4879

.
[link](   /uri
  "title"  )
.
<p><a href="/uri" title="title">link</a></p>
.

error:

<p>[link](   /uri
&quot;title&quot;  )</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4898

.
[foo <bar attr="](baz)">
.
<p>[foo <bar attr="](baz)"></p>
.

error:

<p>[foo &lt;bar attr=&quot;](baz)&quot;&gt;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4927

.
[foo][bar]

[bar]: /url "title"
.
<p><a href="/url" title="title">foo</a></p>
.

error:

<p>[foo][bar]</p>
<p>[bar]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4937

.
[*foo\!*][bar]

[bar]: /url "title"
.
<p><a href="/url" title="title"><em>foo!</em></a></p>
.

error:

<p>[*foo!*][bar]</p>
<p>[bar]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4947

.
[foo][BaR]

[bar]: /url "title"
.
<p><a href="/url" title="title">foo</a></p>
.

error:

<p>[foo][BaR]</p>
<p>[bar]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4957

.
[Толпой][Толпой] is a Russian word.

[ТОЛПОЙ]: /url
.
<p><a href="/url">Толпой</a> is a Russian word.</p>
.

error:

<p>[Толпой][Толпой] is a Russian word.</p>
<p>[ТОЛПОЙ]: /url</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4968

.
[Foo
  bar]: /url

[Baz][Foo bar]
.
<p><a href="/url">Baz</a></p>
.

error:

<p>[Foo
bar]: /url</p>
<p>[Baz][Foo bar]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4979

.
[foo] [bar]

[bar]: /url "title"
.
<p><a href="/url" title="title">foo</a></p>
.

error:

<p>[foo] [bar]</p>
<p>[bar]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4987

.
[foo]
[bar]

[bar]: /url "title"
.
<p><a href="/url" title="title">foo</a></p>
.

error:

<p>[foo]
[bar]</p>
<p>[bar]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4999

.
[foo]: /url1

[foo]: /url2

[bar][foo]
.
<p><a href="/url1">bar</a></p>
.

error:

<p>[foo]: /url1</p>
<p>[foo]: /url2</p>
<p>[bar][foo]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5013

.
[bar][foo\!]

[foo!]: /url
.
<p>[bar][foo!]</p>
.

error:

<p>[bar][foo!]</p>
<p>[foo!]: /url</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5030

.
[foo][]

[foo]: /url "title"
.
<p><a href="/url" title="title">foo</a></p>
.

error:

<p>[foo][]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5038

.
[*foo* bar][]

[*foo* bar]: /url "title"
.
<p><a href="/url" title="title"><em>foo</em> bar</a></p>
.

error:

<p>[*foo* bar][]</p>
<p>[*foo* bar]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5048

.
[Foo][]

[foo]: /url "title"
.
<p><a href="/url" title="title">Foo</a></p>
.

error:

<p>[Foo][]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5060

.
[foo] 
[]

[foo]: /url "title"
.
<p><a href="/url" title="title">foo</a></p>
.

error:

<p>[foo]
[]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5079

.
[foo]

[foo]: /url "title"
.
<p><a href="/url" title="title">foo</a></p>
.

error:

<p>[foo]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5087

.
[*foo* bar]

[*foo* bar]: /url "title"
.
<p><a href="/url" title="title"><em>foo</em> bar</a></p>
.

error:

<p>[*foo* bar]</p>
<p>[*foo* bar]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5095

.
[[*foo* bar]]

[*foo* bar]: /url "title"
.
<p>[<a href="/url" title="title"><em>foo</em> bar</a>]</p>
.

error:

<p>[[*foo* bar]]</p>
<p>[*foo* bar]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5105

.
[Foo]

[foo]: /url "title"
.
<p><a href="/url" title="title">Foo</a></p>
.

error:

<p>[Foo]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5116

.
\[foo]

[foo]: /url "title"
.
<p>[foo]</p>
.

error:

<p>[foo]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5127

.
[foo*]: /url

*[foo*]
.
<p>*<a href="/url">foo*</a></p>
.

error:

<p>[foo*]: /url</p>
<p>*[foo*]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5138

.
[foo`]: /url

[foo`]`
.
<p>[foo<code>]</code></p>
.

error:

<p>[foo`]: /url</p>
<p>[foo<code>]</code></p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5148

.
[[[foo]]]

[[[foo]]]: /url
.
<p><a href="/url">[[foo]]</a></p>
.

error:

<p>[[[foo]]]</p>
<p>[[[foo]]]: /url</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5156

.
[[[foo]]]

[[[foo]]]: /url1
[foo]: /url2
.
<p><a href="/url1">[[foo]]</a></p>
.

error:

<p>[[[foo]]]</p>
<p>[[[foo]]]: /url1
[foo]: /url2</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5167

.
[\[foo]

[\[foo]: /url
.
<p><a href="/url">[foo</a></p>
.

error:

<p>[[foo]</p>
<p>[[foo]: /url</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5177

.
[foo][bar]

[foo]: /url1
[bar]: /url2
.
<p><a href="/url2">foo</a></p>
.

error:

<p>[foo][bar]</p>
<p>[foo]: /url1
[bar]: /url2</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5189

.
[foo][bar][baz]

[baz]: /url
.
<p>[foo]<a href="/url">bar</a></p>
.

error:

<p>[foo][bar][baz]</p>
<p>[baz]: /url</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5200

.
[foo][bar][baz]

[baz]: /url1
[bar]: /url2
.
<p><a href="/url2">foo</a><a href="/url1">baz</a></p>
.

error:

<p>[foo][bar][baz]</p>
<p>[baz]: /url1
[bar]: /url2</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5212

.
[foo][bar][baz]

[baz]: /url1
[foo]: /url2
.
<p>[foo]<a href="/url1">bar</a></p>
.

error:

<p>[foo][bar][baz]</p>
<p>[baz]: /url1
[foo]: /url2</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5229

.
![foo](/url "title")
.
<p><img src="/url" alt="foo" title="title" /></p>
.

error:

<p>![foo](/url &quot;title&quot;)</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5235

.
![foo *bar*]

[foo *bar*]: train.jpg "train & tracks"
.
<p><img src="train.jpg" alt="foo &lt;em&gt;bar&lt;/em&gt;" title="train &amp; tracks" /></p>
.

error:

<p>![foo *bar*]</p>
<p>[foo *bar*]: train.jpg &quot;train &amp; tracks&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5243

.
![foo *bar*][]

[foo *bar*]: train.jpg "train & tracks"
.
<p><img src="train.jpg" alt="foo &lt;em&gt;bar&lt;/em&gt;" title="train &amp; tracks" /></p>
.

error:

<p>![foo *bar*][]</p>
<p>[foo *bar*]: train.jpg &quot;train &amp; tracks&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5251

.
![foo *bar*][foobar]

[FOOBAR]: train.jpg "train & tracks"
.
<p><img src="train.jpg" alt="foo &lt;em&gt;bar&lt;/em&gt;" title="train &amp; tracks" /></p>
.

error:

<p>![foo *bar*][foobar]</p>
<p>[FOOBAR]: train.jpg &quot;train &amp; tracks&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5259

.
![foo](train.jpg)
.
<p><img src="train.jpg" alt="foo" /></p>
.

error:

<p>![foo](train.jpg)</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5265

.
My ![foo bar](/path/to/train.jpg  "title"   )
.
<p>My <img src="/path/to/train.jpg" alt="foo bar" title="title" /></p>
.

error:

<p>My ![foo bar](/path/to/train.jpg  &quot;title&quot;   )</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5271

.
![foo](<url>)
.
<p><img src="url" alt="foo" /></p>
.

error:

<p>![foo](&lt;url&gt;)</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5277

.
![](/url)
.
<p><img src="/url" alt="" /></p>
.

error:

<p>![](/url)</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5285

.
![foo] [bar]

[bar]: /url
.
<p><img src="/url" alt="foo" /></p>
.

error:

<p>![foo] [bar]</p>
<p>[bar]: /url</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5293

.
![foo] [bar]

[BAR]: /url
.
<p><img src="/url" alt="foo" /></p>
.

error:

<p>![foo] [bar]</p>
<p>[BAR]: /url</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5303

.
![foo][]

[foo]: /url "title"
.
<p><img src="/url" alt="foo" title="title" /></p>
.

error:

<p>![foo][]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5311

.
![*foo* bar][]

[*foo* bar]: /url "title"
.
<p><img src="/url" alt="&lt;em&gt;foo&lt;/em&gt; bar" title="title" /></p>
.

error:

<p>![*foo* bar][]</p>
<p>[*foo* bar]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5321

.
![Foo][]

[foo]: /url "title"
.
<p><img src="/url" alt="Foo" title="title" /></p>
.

error:

<p>![Foo][]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5332

.
![foo] 
[]

[foo]: /url "title"
.
<p><img src="/url" alt="foo" title="title" /></p>
.

error:

<p>![foo]
[]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5343

.
![foo]

[foo]: /url "title"
.
<p><img src="/url" alt="foo" title="title" /></p>
.

error:

<p>![foo]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5351

.
![*foo* bar]

[*foo* bar]: /url "title"
.
<p><img src="/url" alt="&lt;em&gt;foo&lt;/em&gt; bar" title="title" /></p>
.

error:

<p>![*foo* bar]</p>
<p>[*foo* bar]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5359

.
![[foo]]

[[foo]]: /url "title"
.
<p><img src="/url" alt="[foo]" title="title" /></p>
.

error:

<p>![[foo]]</p>
<p>[[foo]]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5369

.
![Foo]

[foo]: /url "title"
.
<p><img src="/url" alt="Foo" title="title" /></p>
.

error:

<p>![Foo]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5380

.
\!\[foo]

[foo]: /url "title"
.
<p>![foo]</p>
.

error:

<p>![foo]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5391

.
\![foo]

[foo]: /url "title"
.
<p>!<a href="/url" title="title">foo</a></p>
.

error:

<p>![foo]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5464

.
<MAILTO:FOO@BAR.BAZ>
.
<p><a href="MAILTO:FOO@BAR.BAZ">MAILTO:FOO@BAR.BAZ</a></p>
.

error:

<p>&lt;MAILTO:FOO@BAR.BAZ&gt;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5627

.
<a><bab><c2c>
.
<p><a><bab><c2c></p>
.

error:

<a><bab><c2c>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5635

.
<a/><b2/>
.
<p><a/><b2/></p>
.

error:

<a/><b2/>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5643

.
<a  /><b2
data="foo" >
.
<p><a  /><b2
data="foo" ></p>
.

error:

<a  /><b2
data="foo" >


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5653

.
<a foo="bar" bam = 'baz <em>"</em>'
_boolean zoop:33=zoop:33 />
.
<p><a foo="bar" bam = 'baz <em>"</em>'
_boolean zoop:33=zoop:33 /></p>
.

error:

<a foo="bar" bam = 'baz <em>"</em>'
_boolean zoop:33=zoop:33 />


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5705

.
</a>
</foo >
.
<p></a>
</foo ></p>
.

error:

</a>
</foo >


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5723

.
foo <!-- this is a
comment - with hyphen -->
.
<p>foo <!-- this is a
comment - with hyphen --></p>
.

error:

<p>foo &lt;!-- this is a
comment - with hyphen --&gt;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5739

.
foo <?php echo $a; ?>
.
<p>foo <?php echo $a; ?></p>
.

error:

<p>foo &lt;?php echo $a; ?&gt;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5747

.
foo <!ELEMENT br EMPTY>
.
<p>foo <!ELEMENT br EMPTY></p>
.

error:

<p>foo &lt;!ELEMENT br EMPTY&gt;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5755

.
foo <![CDATA[>&<]]>
.
<p>foo <![CDATA[>&<]]></p>
.

error:

<p>foo &lt;![CDATA[&gt;&amp;&lt;]]&gt;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5763

.
<a href="&ouml;">
.
<p><a href="&ouml;"></p>
.

error:

<a href="&ouml;">


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5771

.
<a href="\*">
.
<p><a href="\*"></p>
.

error:

<a href="\*">


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5839

.
*foo  
bar*
.
<p><em>foo<br />
bar</em></p>
.

error:

<p>*foo<br />
bar*</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5847

.
*foo\
bar*
.
<p><em>foo<br />
bar</em></p>
.

error:

<p>*foo<br />
bar*</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5873

.
<a href="foo  
bar">
.
<p><a href="foo  
bar"></p>
.

error:

<a href="foo  
bar">


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5881

.
<a href="foo\
bar">
.
<p><a href="foo\
bar"></p>
.

error:

<a href="foo\
bar">


